情報の追記
- フッターの調整
- スタイルの調整

--- a/index.html
+++ b/index.html
@@ -67,11 +67,8 @@
 		<div class="inner">
 			<section class="gridWrapper">
 				<article class="grid">
-					<p class="logo"><a href="index.html" title="ホームページサンプル株式会社" rel="home">Company Name<br /><span>Your Company Slogan</span></a></p>
-				</article>
-				<article class="grid">
-					<p class="tel"><span>電話:</span> <strong>012-3456-7890</strong></p>
-					<p class="open">受付時間: 平日 AM 10:00 〜 PM 5:00</p>
+					<p class="tel"><span>お問合せ先:</span> <strong>info★h06.meishinkai.net</strong></p>
+					<p class="open">(★を@に置き換えてください)</p>
 				</article>
 				<article class="grid copyright">
 					Copyright(c) 2016 ホームページサンプル株式会社 All Rights Reserved. Design by <a href="http://f-tpl.com" target="_blank" rel="nofollow">http://f-tpl.com</a>
