公開に向けて、不要な情報を削除

--- a/committee.html
+++ b/committee.html
@@ -123,6 +123,10 @@
 							<td>高山 晴武、見崎 孝一、久保田 貞好、田中 美智子、谷口 仁美、<br />北村 仁美、川崎 美和、竹内 美峰、中澤 直子、中條 加奈子、<br />根岸 輝尚、清水 恒平、大田 知子、下浦 智恵美</td>
 						</tr>
 					</table>
+					<h3>東京明新会実行委員会　(調整中)</h3>
+					<h3>近畿明新会実行委員会　(調整中)</h3>
+					<h3>中京明新会実行委員会　(調整中)</h3>
+					<h3>金沢明新会実行委員会　(調整中)</h3>
 				</article>
 			</section>
 		</section>
