--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
 			<aside id="sub" class="gridWrapper">
 				<section class="grid">
 					<ul class="menu">
-						<li>2020.xx.xx<p />XXX</li>
-						<li>2020.11.xx<p />サイトをオープンしました</li>
+						<li>2020.12<p />サイトをオープンしました</li>
 					</ul>
 				</section>
 			</aside>
