部会委員を更新

--- a/committee.html
+++ b/committee.html
@@ -105,7 +105,7 @@
 						</tr>
 						<tr>
 							<th>部会委員</th>
-							<td>中西 麻紀、森 裕美子、高橋 美智子、松浦 美帆、磯見 里美、<br />岸下 宏美、長谷川 忍、西 善樹、谷口 倫章、倉 有里恵、<br />福山 潤一、保田 奈緒子、高波 珠実、野村 耕一、川畑 美恵</td>
+							<td>中西 麻紀、森 裕美子、高橋 美智子、松浦 美帆、磯見 里美、<br />岸下 宏美、長谷川 忍、西 善樹、谷口 倫章、倉 有里恵、<br />福山 潤一、保田 奈緒子、高波 珠実、野村 耕一、川畑 美恵、<br />牧島志穂</td>
 						</tr>
 					</table>
 					<h3>ようこそ先輩部会</h3>
@@ -120,7 +120,7 @@
 						</tr>
 						<tr>
 							<th>部会委員</th>
-							<td>高山 晴武、見崎 孝一、久保田 貞好、田中 美智子、谷口 仁美、<br />北村 仁美、川崎 美和、竹内 美峰、中澤 直子、中條 加奈子、<br />根岸 輝尚、清水 恒平、大田 知子、下浦 智恵美</td>
+							<td>高山 晴武、見崎 孝一、久保田 貞好、田中 美智子、谷口 仁美、<br />北村 仁美、川﨑 美和、竹内 美峰、中澤 直子、中條 加奈子、<br />根岸 輝尚、清水 恒平、大田 知子、下浦 智恵美、高橋 恵理</td>
 						</tr>
 					</table>
 					<h3>東京明新会実行委員会　(調整中)</h3>
