部会委員の追加

--- a/committee.html
+++ b/committee.html
@@ -90,7 +90,7 @@
 						</tr>
 						<tr>
 							<th>部会委員</th>
-							<td>玉本 響子、斉木 晶子、河合 真希、長谷川 論、山本 友美、<br />佐々木 香織、富田 暢宏、小林 和洋、山本 清大、杉本 大悟</td>
+							<td>玉本 響子、斉木 晶子、河合 真希、長谷川 論、山本 友美、<br />佐々木 香織、富田 暢宏、小林 和洋、山本 清大、杉本 大悟、<br />高橋 浩一</td>
 						</tr>
 					</table>
 					<h3>記念誌部会</h3>
@@ -105,7 +105,7 @@
 						</tr>
 						<tr>
 							<th>部会委員</th>
-							<td>中西 麻紀、森 裕美子、高橋 美智子、松浦 美帆、磯見 里美、<br />岸下 宏美、長谷川 忍、西 善樹、谷口 倫章、倉 有里恵、<br />福山 潤一、保田 奈緒子、高波 珠実、野村 耕一、川畑 美恵、<br />牧島志穂</td>
+							<td>中西 麻紀、森 裕美子、高橋 美智子、松浦 美帆、磯見 里美、<br />岸下 宏美、長谷川 忍、西 善樹、谷口 倫章、倉 有里恵、<br />福山 潤一、保田 奈緒子、高波 珠実、野村 耕一、川畑 美恵、<br />牧島 志穂、小幡 祥代</td>
 						</tr>
 					</table>
 					<h3>ようこそ先輩部会</h3>
@@ -120,7 +120,7 @@
 						</tr>
 						<tr>
 							<th>部会委員</th>
-							<td>高山 晴武、見崎 孝一、久保田 貞好、田中 美智子、谷口 仁美、<br />北村 仁美、川﨑 美和、竹内 美峰、中澤 直子、中條 加奈子、<br />根岸 輝尚、清水 恒平、大田 知子、下浦 智恵美、高橋 恵理</td>
+							<td>高山 晴武、見崎 孝一、久保田 貞好、田中 美智子、谷口 仁美、<br />北村 仁美、川﨑 美和、竹内 美峰、中澤 直子、中條 加奈子、<br />根岸 輝尚、清水 恒平、大田 知子、下浦 智恵美、高橋 恵理<br />林 啓之</td>
 						</tr>
 					</table>
 					<h3>東京明新会実行委員会　(調整中)</h3>
