--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 	<div id="mainBanner">
 		<div class="inner">
-			<img src="images/banners/mainImg.jpg" width="940" height="300" alt="ホームページサンプル株式会社のサイトです">
+			<img src="images/banners/mainImg.png" width="940" height="300" alt="ホームページサンプル株式会社のサイトです">
 		</div>
 	</div>
 
@@ -63,6 +63,9 @@
 			<h3 class="heading" style="margin-bottom:0px;">お知らせ</h3>
 			<aside id="sub" class="gridWrapper">
 				<section class="grid">
+					<ul class="menu">
+						<li>2020.2.4<p />サイトのイメージをアップしました</li>
+					</ul>
 					<ul class="menu">
 						<li>2020.12<p />サイトをオープンしました</li>
 					</ul>
