記念誌部会員を追加

--- a/committee.html
+++ b/committee.html
@@ -105,7 +105,7 @@
 						</tr>
 						<tr>
 							<th>部会委員</th>
-							<td>中西 麻紀、森 裕美子、高橋 美智子、松浦 美帆、磯見 里美、<br />岸下 宏美、長谷川 忍、西 善樹、谷口 倫章、倉 有里恵、<br />福山 潤一、保田 奈緒子、高波 珠実、野村 耕一、川畑 美恵、<br />牧島 志穂、小幡 祥代</td>
+							<td>中西 麻紀、森 裕美子、高橋 美智子、松浦 美帆、磯見 里美、<br />岸下 宏美、長谷川 忍、西 善樹、谷口 倫章、倉 有里恵、<br />福山 潤一、保田 奈緒子、高波 珠実、野村 耕一、川畑 美恵、<br />牧島 志穂、小幡 祥代、渡辺 健史</td>
 						</tr>
 					</table>
 					<h3>ようこそ先輩部会</h3>
