総会の議題を追加
- 総会部会員の調整

--- a/committee.html
+++ b/committee.html
@@ -90,7 +90,7 @@
 						</tr>
 						<tr>
 							<th>部会委員</th>
-							<td>玉本 響子、斉木 晶子、河合 真希、長谷川 論、山本 友美、<br />佐々木 香織、富田 暢宏、小林 和洋、山本 清大、杉本 大悟、<br />高橋 浩一</td>
+							<td>玉本 響子、斉木 晶子、河合 真希、長谷川 論、山本 友美、<br />富田 暢宏、小林 和洋、山本 清大、高橋 浩一</td>
 						</tr>
 					</table>
 					<h3>記念誌部会</h3>
