--- a/assembly.html
+++ b/assembly.html
@@ -52,7 +52,12 @@
 					会場：藤島高校 新嶺会館 3階プラタナスホール<br />
 					受付：13:30〜</p></strong>
 					<h3>通常総会</h3>
-					<p>議題：調整中</p><p>なお本年は、総会後の記念講演会と懇親会を開催しないことといたしました。</p>
+					<p>時間：14:00〜15:00<br />議題：<br />◆決議事項<br />
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;第1号議案：令和2年度事業報告並びに貸借対照表及び損益計算書、正味財産増減計算書について承認の件<br />
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;第2号議案：代議員改選について
+						<br />◆報告事項<br />
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;令和3年度事業計画書及び収支予算書について承認の件<br />◆その他</p>
+					<p></p><p>なお本年は、総会後の記念講演会と懇親会を開催しないことといたしました。</p>
 				</article>
 			</section>
 		</section>
