--- a/committee.html
+++ b/committee.html
@@ -90,7 +90,7 @@
 						</tr>
 						<tr>
 							<th>部会委員</th>
-							<td>玉本 響子、斉木 晶子、河合 真希、長谷川 論、山本 友美、<br />富田 暢宏、小林 和洋、山本 清大、高橋 浩一</td>
+							<td>玉本 響子、斉木 晶子、河合 真希、長谷川 論、山本 友美、<br />小林 和洋、山本 清大、高橋 浩一</td>
 						</tr>
 					</table>
 					<h3>記念誌部会</h3>
@@ -105,7 +105,7 @@
 						</tr>
 						<tr>
 							<th>部会委員</th>
-							<td>中西 麻紀、森 裕美子、高橋 美智子、松浦 美帆、磯見 里美、<br />岸下 宏美、長谷川 忍、西 善樹、谷口 倫章、倉 有里恵、<br />福山 潤一、保田 奈緒子、高波 珠実、野村 耕一、川畑 美恵、<br />牧島 志穂、小幡 祥代、渡辺 健史</td>
+							<td>中西 麻紀、森 裕美子、高橋 美智子、松浦 美帆、磯見 里美、<br />岸下 宏美、長谷川 忍、西 善樹、谷口 倫章、倉 有里恵、<br />福山 潤一、高波 珠実、野村 耕一、川畑 美恵、<br />牧島 志穂、小幡 祥代、渡辺 健史</td>
 						</tr>
 					</table>
 					<h3>ようこそ先輩部会</h3>
