部会員調整

--- a/committee.html
+++ b/committee.html
@@ -56,7 +56,7 @@
 						</tr>
 						<tr>
 							<th>副実行委員長</th>
-							<td></td>
+							<td>松本 竜哉</td>
 						</tr>
 					</table>
 					<h3>事務局</h3>
@@ -97,11 +97,11 @@
 					<table>
 						<tr>
 							<th>部会長</th>
-							<td>松本 竜哉</td>
+							<td>桂 知之</td>
 						</tr>
 						<tr>
 							<th>副部会長</th>
-							<td>桂 知之</td>
+							<td>松本 竜哉（*副実行委員長と兼任）</td>
 						</tr>
 						<tr>
 							<th>部会委員</th>
@@ -120,13 +120,13 @@
 						</tr>
 						<tr>
 							<th>部会委員</th>
-							<td>高山 晴武、見崎 孝一(*)、久保田 貞好(*)、田中 美智子、谷口 仁美、<br />北村 仁美、川﨑 美和、竹内 美峰、中澤 直子(*)、中條 加奈子(*)、<br />根岸 輝尚(*)、清水 恒平(*)、大田 知子、下浦 智恵美、高橋 恵理<br />林 啓之、吉田 真紀、青木 大輔(*)、飯田 裕樹(*)、松田 真<br />西田 有紀、斉藤 理恵、矢尾 優樹(*)、山﨑 修司<br /><span class="next">(*)は講師専任</span></td>
+							<td>高山 晴武、見崎 孝一（*）、久保田 貞好（*）、田中 美智子、谷口 仁美、<br />北村 仁美、川﨑 美和、竹内 美峰、中澤 直子（*）、中條 加奈子（*）、<br />根岸 輝尚（*）、清水 恒平（*）、大田 知子、下浦 智恵美、高橋 恵理<br />林 啓之、吉田 真紀、青木 大輔（*）、飯田 裕樹（*）、松田 真<br />西田 有紀、斉藤 理恵、矢尾 優樹（*）、山﨑 修司<br /><span class="next">（*）は講師専任</span></td>
 						</tr>
 					</table>
-					<h3>東京明新会実行委員会　(調整中)</h3>
-					<h3>近畿明新会実行委員会　(調整中)</h3>
-					<h3>中京明新会実行委員会　(調整中)</h3>
-					<h3>金沢明新会実行委員会　(調整中)</h3>
+					<h3>東京明新会実行委員会　（調整中）</h3>
+					<h3>近畿明新会実行委員会　（調整中）</h3>
+					<h3>中京明新会実行委員会　（調整中）</h3>
+					<h3>金沢明新会実行委員会　（調整中）</h3>
 				</article>
 			</section>
 		</section>
@@ -137,10 +137,10 @@
 			<section class="gridWrapper">
 				<article class="grid">
 					<p class="tel"><span>お問合せ先:</span> <strong>info★h06.meishinkai.net</strong></p>
-					<p class="open">(★を@に置き換えてください)</p>
+					<p class="open">（★を@に置き換えてください）</p>
 				</article>
 				<article class="grid copyright">
-					Copyright(c) 2016 ホームページサンプル株式会社 All Rights Reserved. Design by <a href="http://f-tpl.com" target="_blank" rel="nofollow">http://f-tpl.com</a>
+					Copyright（c） 2016 ホームページサンプル株式会社 All Rights Reserved. Design by <a href="http://f-tpl.com" target="_blank" rel="nofollow">http://f-tpl.com</a>
 				</article>
 			</section>
 		</div>
