レイアウト等の調整

--- a/welcome.html
+++ b/welcome.html
@@ -163,109 +163,103 @@
 						</tr>
 						<tr>
 							<td style="text-align: center;vertical-align: middle;">4</td>
-							<td>竹内 美峰<br /><span style="font-size: 0.8em;">たけうち みほ</span></td>
-							<td>ラーバンの森動物病院(株式会社楓物語)<br />看取締役</td>
-							<td>獣医師<br />〜動物のお医者さんのいろいろな仕事〜</td>
-						</tr>
-						<tr>
-							<td style="text-align: center;vertical-align: middle;">4</td>
 							<td>川﨑 美和<br /><span style="font-size: 0.8em;">かわさき みわ</span><br />谷口 仁美<br /><span style="font-size: 0.8em;">たにぐち ひとみ</span></td>
 							<td>坂井市立平章小学校/永平寺町立志比南小学校<br />小学校教師</td>
 							<td>小学校教員の仕事<br />〜先生の仕事のやりがいと魅力〜</td>
 						</tr>
 						<tr>
 							<td style="text-align: center;vertical-align: middle;">4</td>
-							<td nowrap>吉岡 淳一<br /><span style="font-size: 0.8em;">よしおか じゅんいち</span></td>
+							<td>吉岡 淳一<br /><span style="font-size: 0.8em;">よしおか じゅんいち</span></td>
 							<td>中部精機株式会社/自営業<br />新規事業推進室マネージャー</td>
 							<td>失敗のススメ、きっと未来は変えられる</td>
 						</tr>
 						<tr>
 							<td style="text-align: center;vertical-align: middle;">4</td>
-							<td nowrap>山口 龍史<br /><span style="font-size: 0.8em;">やまぐち たつふみ</span></td>
+							<td>山口 龍史<br /><span style="font-size: 0.8em;">やまぐち たつふみ</span></td>
 							<td>公益財団法人若狭湾エネルギー研究センター福井県原子力人材育成センター<br />国際人材育成グループグループリーダー</td>
 							<td>低英語力学習者のための国際的お仕事概論</td>
 						</tr>
 						<tr>
 							<td style="text-align: center;vertical-align: middle;">5</td>
-							<td nowrap>矢尾 優樹<br /><span style="font-size: 0.8em;">やお ひろき</span></td>
+							<td>矢尾 優樹<br /><span style="font-size: 0.8em;">やお ひろき</span></td>
 							<td>外資系コンサルティングファーム</td>
 							<td>外資系コンサルティングファームで働いてみた</td>
 						</tr>
 						<tr>
 							<td style="text-align: center;vertical-align: middle;">7</td>
-							<td nowrap>田中 美智子<br /><span style="font-size: 0.8em;">たなか みちこ</span></td>
+							<td>田中 美智子<br /><span style="font-size: 0.8em;">たなか みちこ</span></td>
 							<td>なつめ薬局/ふたみ薬局/他<br />薬剤師</td>
 							<td>進路と職業<br />〜とらわれず、もっと自由に〜</td>
 						</tr>
 						<tr>
 							<td style="text-align: center;vertical-align: middle;">8</td>
-							<td nowrap>飯田 裕樹<br /><span style="font-size: 0.8em;">いいだ ひろき</span></td>
+							<td>飯田 裕樹<br /><span style="font-size: 0.8em;">いいだ ひろき</span></td>
 							<td>iso'design inc./日本工学院専門学校<br />代表取締役/インテリアデザイン専攻 非常勤講師</td>
 							<td>デザインの千本ノック</td>
 						</tr>
 						<tr>
 							<td style="text-align: center;vertical-align: middle;">8</td>
-							<td nowrap>久保田 貞好<br /><span style="font-size: 0.8em;">くぼた さだこ</span></td>
+							<td>久保田 貞好<br /><span style="font-size: 0.8em;">くぼた さだこ</span></td>
 							<td>こころとからだ 光の花クリニック<br />精神科医師</td>
 							<td>寄り道、回り道も大丈夫だった<br />ー精神 科医としても私個人の人生もー</td>
 						</tr>
 						<tr>
 							<td style="text-align: center;vertical-align: middle;">8</td>
-							<td nowrap>森下 公俊<br /><span style="font-size: 0.8em;">もりした きみとし</span></td>
+							<td>森下 公俊<br /><span style="font-size: 0.8em;">もりした きみとし</span></td>
 							<td>富山県リハビリテーション病院・こども 支援センター 小児<br />医師(小児整形外科)</td>
 							<td>人間のすばらしさ ー 小児整形外科医として</td>
 						</tr>
 						<tr>
 							<td style="text-align: center;vertical-align: middle;">8</td>
-							<td nowrap>松田 真<br /><span style="font-size: 0.8em;">まつだ まこと</span></td>
+							<td>松田 真<br /><span style="font-size: 0.8em;">まつだ まこと</span></td>
 							<td>株式会社村田製作所<br />コンデンサ開発部開発1部 部長</td>
 							<td>小さな部品を世界/宇宙へ、未来をソウゾウする商品開発の楽しさ</td>
 						</tr>
 						<tr>
 							<td style="text-align: center;vertical-align: middle;">8</td>
-							<td nowrap>見崎 孝一<br /><span style="font-size: 0.8em;">みさき こういち</span></td>
+							<td>見崎 孝一<br /><span style="font-size: 0.8em;">みさき こういち</span></td>
 							<td>金沢大学脳神経外科<br />医師(脳神経外科)</td>
 							<td>脳神経外科医のやりがいと魅力<br />〜チャンスをつかみ自分を高めるには〜</td>
 						</tr>
 						<tr>
 							<td style="text-align: center;vertical-align: middle;">8</td>
-							<td nowrap>奥島 啓介<br /><span style="font-size: 0.8em;">おくしま けいすけ</span></td>
+							<td>奥島 啓介<br /><span style="font-size: 0.8em;">おくしま けいすけ</span></td>
 							<td>株式会社NTTドコモ<br />5G・IoTビジネス部担当部長</td>
 							<td>5G・AI・IoTで変わる近未来の働き方</td>
 						</tr>
 						<tr>
 							<td style="text-align: center;vertical-align: middle;">9</td>
-							<td nowrap>大谷 優一<br /><span style="font-size: 0.8em;">おおたに ゆういち</span></td>
+							<td>大谷 優一<br /><span style="font-size: 0.8em;">おおたに ゆういち</span></td>
 							<td>株式会社ライブトゥーラブ・ジャパン<br />代表取締役社長</td>
 							<td>プログラミングでお一人様起業<br />〜変化に強い生き方〜</td>
 						</tr>
 						<tr>
 							<td style="text-align: center;vertical-align: middle;">10</td>
-							<td nowrap>根岸 輝尚<br /><span style="font-size: 0.8em;">ねぎし てるひさ</span></td>
+							<td>根岸 輝尚<br /><span style="font-size: 0.8em;">ねぎし てるひさ</span></td>
 							<td>福井メトロ劇場/マネックス証券<br />福井メトロ劇場館主/マネックス証券 マネージャー</td>
 							<td>証券会社と映画館と<br />〜二重生活のすゝめ〜</td>
 						</tr>
 						<tr>
 							<td style="text-align: center;vertical-align: middle;">10</td>
-							<td nowrap>杉本 大悟<br /><span style="font-size: 0.8em;">すぎもと だいご</span></td>
+							<td>杉本 大悟<br /><span style="font-size: 0.8em;">すぎもと だいご</span></td>
 							<td>南越前町立今庄中学校<br />中学校教師</td>
 							<td>先生になろう!<br />〜夢は正夢〜</td>
 						</tr>
 						<tr>
 							<td style="text-align: center;vertical-align: middle;">H5</td>
-							<td nowrap>中島 智一郎<br /><span style="font-size: 0.8em;">なかじま ともいちろう</span></td>
+							<td>中島 智一郎<br /><span style="font-size: 0.8em;">なかじま ともいちろう</span></td>
 							<td>福井県庁<br />土木部 河川課 主任</td>
 							<td>地図に残る土木の仕事<br />〜道路、新幹 線、ダム・・・みんなの暮らしを支えます〜</td>
 						</tr>
 						<tr>
 							<td style="text-align: center;vertical-align: middle;">H5</td>
-							<td nowrap>吹矢 洋一<br /><span style="font-size: 0.8em;">ふきや よういち</span></td>
+							<td>吹矢 洋一<br /><span style="font-size: 0.8em;">ふきや よういち</span></td>
 							<td>弁護士法人 大阪西総合法律事務所<br />弁護士</td>
 							<td>”究極の自由業”弁護士<br />〜私が弁護士に「なるまで」と「なってから」のこと〜</td>
 						</tr>
 						<tr>
 							<td style="text-align: center;vertical-align: middle;">H5</td>
-							<td nowrap>近藤 悟<br /><span style="font-size: 0.8em;">こんどう さとる</span></td>
+							<td>近藤 悟<br /><span style="font-size: 0.8em;">こんどう さとる</span></td>
 							<td>金沢大学医学系耳鼻咽喉科・頭頸部外科学<br />医師(耳鼻咽喉科)</td>
 							<td>耳鼻咽喉科医師として医学研究を続けること</td>
 						</tr>
