細かい調整

--- a/welcome.html
+++ b/welcome.html
@@ -62,7 +62,7 @@
 						<tr>
 							<td style="text-align: center;vertical-align: middle;">1</td>
 							<td>神谷 桂一<br /><span style="font-size: 0.8em;">かみや けいいち</span></td>
-							<td>福井市役所<br />農林水産部 農政企 画課 主幹</td>
+							<td>福井市役所<br />農林水産部 農政企画課 主幹</td>
 							<td>何となくで公務員<br/>〜税金からガスコンロまで〜</td>
 						</tr>
 						<tr>
@@ -80,13 +80,13 @@
 						<tr>
 							<td style="text-align: center;vertical-align: middle;">2</td>
 							<td>中條 加奈子<br /><span style="font-size: 0.8em;">なかじょう かなこ</span></td>
-							<td>ヘアアート・ジャパ ン株式会社<br />代表取締役社長</td>
+							<td>ヘアアート・ジャパン株式会社<br />代表取締役社長</td>
 							<td>自分をブランディングしてみよう♪</td>
 						</tr>
 						<tr>
 							<td style="text-align: center;vertical-align: middle;">2</td>
 							<td>吉川 和洋<br /><span style="font-size: 0.8em;">よしかわ かずひろ</span></td>
-							<td>三菱商事株式会社<br />三菱商事フィナン シャルサービス</td>
+							<td>三菱商事株式会社<br />三菱商事フィナンシャルサービス</td>
 							<td>ぼんやりとした将来に向けて楽しむ生き方</td>
 						</tr>
 						<tr>
@@ -98,7 +98,7 @@
 						<tr>
 							<td style="text-align: center;vertical-align: middle;">2</td>
 							<td>丹尾 太一郎<br /><span style="font-size: 0.8em;">にお たいちろう</span></td>
-							<td>公北陸電力送配電株式会社<br />福井支社 用地部課長</td>
+							<td>北陸電力送配電株式会社<br />福井支社 用地部課長</td>
 							<td>電柱にも上れない事務系電力マンはいつも何をやっているのか</td>
 						</tr>
 						<tr>
@@ -158,7 +158,7 @@
 						<tr>
 							<td style="text-align: center;vertical-align: middle;">4</td>
 							<td>竹内 美峰<br /><span style="font-size: 0.8em;">たけうち みほ</span></td>
-							<td>ラーバンの森動物病院(株式会社楓物語)<br />看取締役</td>
+							<td>ラーバンの森動物病院(株式会社楓物語)<br />取締役</td>
 							<td>獣医師<br />〜動物のお医者さんのいろいろな仕事〜</td>
 						</tr>
 						<tr>
@@ -249,7 +249,7 @@
 							<td style="text-align: center;vertical-align: middle;">H5</td>
 							<td>中島 智一郎<br /><span style="font-size: 0.8em;">なかじま ともいちろう</span></td>
 							<td>福井県庁<br />土木部 河川課 主任</td>
-							<td>地図に残る土木の仕事<br />〜道路、新幹 線、ダム・・・みんなの暮らしを支えます〜</td>
+							<td>地図に残る土木の仕事<br />〜道路、新幹線、ダム・・・みんなの暮らしを支えます〜</td>
 						</tr>
 						<tr>
 							<td style="text-align: center;vertical-align: middle;">H5</td>
