名前のふりがな修正

--- a/welcome.html
+++ b/welcome.html
@@ -205,7 +205,7 @@
 						</tr>
 						<tr>
 							<td style="text-align: center;vertical-align: middle;">8</td>
-							<td>森下 公俊<br /><span style="font-size: 0.8em;">もりした きみとし</span></td>
+							<td>森下 公俊<br /><span style="font-size: 0.8em;">もりした まさとし</span></td>
 							<td>富山県リハビリテーション病院・こども 支援センター 小児<br />医師(小児整形外科)</td>
 							<td>人間のすばらしさ ー 小児整形外科医として</td>
 						</tr>
