ようこそ部会員を更新

--- a/committee.html
+++ b/committee.html
@@ -120,7 +120,7 @@
 						</tr>
 						<tr>
 							<th>部会委員</th>
-							<td>高山 晴武、見崎 孝一（*）、久保田 貞好（*）、田中 美智子、谷口 仁美、<br />北村 仁美、川﨑 美和、竹内 美峰、中澤 直子（*）、中條 加奈子（*）、<br />根岸 輝尚（*）、清水 恒平（*）、大田 知子、下浦 智恵美、高橋 恵理<br />林 啓之、吉田 真紀、青木 大輔（*）、飯田 裕樹（*）、松田 真<br />西田 有紀、斉藤 理恵、矢尾 優樹（*）、山﨑 修司<br /><span class="next">（*）は講師専任</span></td>
+							<td>高山 晴武、田中 美智子、竹内 美峰、下浦 智恵美、高橋 恵理、<br />斉藤 理恵、山﨑 修司、野路 浩之、丸中 孝通、山田 純一</td>
 						</tr>
 					</table>
 					<h3>東京明新会実行委員会　（調整中）</h3>
