細かい修正

--- a/welcome.html
+++ b/welcome.html
@@ -129,13 +129,13 @@
 							<td style="text-align: center;vertical-align: middle;">2</td>
 							<td>三寺 ふみ<br /><span style="font-size: 0.8em;">みてら ふみ</span></td>
 							<td>Saveurs de Bourgogne<br />代表 ワイナリーツアーガイド</td>
-							<td>私フランスワインに魅せられて<br />ーワインを通して見たフランスー</td>
+							<td>フランスワインに魅せられて<br />ーワインを通して見たフランスー</td>
 						</tr>
 						<tr>
 							<td style="text-align: center;vertical-align: middle;">3</td>
 							<td>清水 恒平<br /><span style="font-size: 0.8em;">しみず こうへい</span></td>
 							<td>オフィスナイス(個人事務所)武蔵野美術大学<br />デザイナー/アートディレクター武蔵野美術大学教授</td>
-							<td>デッサンすらしたことがなかった僕が デザイナーを経て美大教授になるまで/デザインってなに？</td>
+							<td>デッサンすらしたことがなかった僕がデザイナーを経て美大教授になるまで/デザインってなに？</td>
 						</tr>
 						<tr>
 							<td style="text-align: center;vertical-align: middle;">3</td>
@@ -201,7 +201,7 @@
 							<td style="text-align: center;vertical-align: middle;">8</td>
 							<td>久保田 貞好<br /><span style="font-size: 0.8em;">くぼた さだこ</span></td>
 							<td>こころとからだ 光の花クリニック<br />精神科医師</td>
-							<td>寄り道、回り道も大丈夫だった<br />ー精神 科医としても私個人の人生もー</td>
+							<td>寄り道、回り道も大丈夫だった<br />ー精神科医としても私個人の人生もー</td>
 						</tr>
 						<tr>
 							<td style="text-align: center;vertical-align: middle;">8</td>
