タブロイド紙をアップ

--- a/welcome.html
+++ b/welcome.html
@@ -36,6 +36,7 @@
 							<li><a href="assembly.html"><strong>総会案内</strong><br /><span>Assembly</span></a></li>
 							<li><a href="committee.html"><strong>実行委員会</strong><br /><span>Committee</span></a></li>
 							<li class="current-menu-item"><a href="welcome.html"><strong>ようこそ先輩</strong><br /><span>WelcomeSenior</span></a></li>
+							<li><a href="tabloid.html"><strong>タブロイド紙</strong><br /><span>Tabloid</span></a></li>
 						</ul>
 					</div>
 				</div>
