--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 							<li><a href="assembly.html"><strong>総会案内</strong><br /><span>Assembly</span></a></li>
 							<li><a href="committee.html"><strong>実行委員会</strong><br /><span>Committee</span></a></li>
 							<li><a href="welcome.html"><strong>ようこそ先輩</strong><br /><span>WelcomeSenior</span></a></li>
+							<li><a href="tabloid.html"><strong>タブロイド紙</strong><br /><span>Tabloid</span></a></li>
 						</ul>
 					</div>
 				</div>
@@ -64,7 +65,10 @@
 			<aside id="sub" class="gridWrapper">
 				<section class="grid">
 					<ul class="menu">
-						<li>2020.2.4<p />サイトのイメージをアップしました</li>
+						<li>2021.6.2<p /><a style="display:inline;color: #358de0;" href="images/tabloid.pdf" target="_blank">タブロイド紙</a>をアップしました</li>
+					</ul>
+					<ul class="menu">
+						<li>2021.2.4<p />サイトのイメージをアップしました</li>
 					</ul>
 					<ul class="menu">
 						<li>2020.12<p />サイトをオープンしました</li>
