--- a/tabloid.html
+++ b/tabloid.html
@@ -44,7 +44,9 @@
 		</div>
 	</header>
 	<div>
-		<iframe style="width: 100%; height: 80vh" src="images/tabloid.pdf" width="100%" height="100%"></iframe>
+		<div style="position: relative; width: 100%; padding: 75% 0 0 0;">
+			<iframe style="position: absolute; top: 0;left: 0; width: 100%; height: 100%" src="images/tabloid.pdf"></iframe>
+		</div>
 	</div>
 	<footer id="footer">
 		<div class="inner">
