スマホで表示できるか確認のためのコード

--- a/tabloid.html
+++ b/tabloid.html
@@ -45,7 +45,7 @@
 	</header>
 	<div>
 		<div style="position: relative; width: 100%; padding: 75% 0 0 0;">
-			<iframe style="position: absolute; top: 0;left: 0; width: 100%; height: 100%" src="images/tabloid.pdf"></iframe>
+			<iframe style="position: absolute; top: 0;left: 0; width: 100%; height: 100%" src="images/tabloid.pdf/preview"></iframe>
 		</div>
 	</div>
 	<footer id="footer">
