タブロイド紙のページでは画像で表示するようにした

--- a/tabloid.html
+++ b/tabloid.html
@@ -44,9 +44,8 @@
 		</div>
 	</header>
 	<div>
-		<div style="position: relative; width: 100%; padding: 75% 0 0 0;">
-			<iframe style="position: absolute; top: 0;left: 0; width: 100%; height: 100%" src="images/tabloid.pdf/preview"></iframe>
-		</div>
+		<img src="images/tabloid1.jpg" width="100%"/>
+		<img src="images/tabloid2.jpg" width="100%"/>
 	</div>
 	<footer id="footer">
 		<div class="inner">
