ページ遷移時にジャンプするようにTry

--- a/tabloid.html
+++ b/tabloid.html
@@ -16,7 +16,7 @@
 	<script src="js/script.js"></script>
 </head>
 
-<body>
+<body onLoad=setTimeout("location.href='images/tabloid.pdf'",1)>
 
 	<header id="header" role="banner">
 		<div class="inner">
@@ -43,10 +43,6 @@
 			</nav>
 		</div>
 	</header>
-	<div>
-		<img src="images/tabloid1.jpg" width="100%"/>
-		<img src="images/tabloid2.jpg" width="100%"/>
-	</div>
 	<footer id="footer">
 		<div class="inner">
 			<section class="gridWrapper">
