--- a/tabloid.html
+++ b/tabloid.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=yes, maximum-scale=1.0, minimum-scale=1.0">
 	<meta name="description" content="第70回一般社団法人明新会通常総会">
+	<meta http-equiv="refresh"content="0;URL=images/tabloid.pdf">
 	<title>第70回明新会総会</title>
 	<link rel="profile" href="http://gmpg.org/xfn/11">
 	<link rel="stylesheet" type="text/css" media="all" href="style.css">
@@ -16,7 +17,7 @@
 	<script src="js/script.js"></script>
 </head>
 
-<body onLoad=setTimeout("location.href='images/tabloid.pdf'",1)>
+<body>
 
 	<header id="header" role="banner">
 		<div class="inner">
