タブロイド紙のダウンロードリンクを追加

--- a/index.html
+++ b/index.html
@@ -65,7 +65,12 @@
 			<aside id="sub" class="gridWrapper">
 				<section class="grid">
 					<ul class="menu">
-						<li>2021.6.2<p /><a style="display:inline;color: #358de0;" href="images/tabloid.pdf" target="_blank">タブロイド紙</a>をアップしました</li>
+						<li>2021.6.2<p />
+							<a style="display:inline;color: #358de0;" href="images/tabloid.pdf" target="_blank">タブロイド紙</a>をアップしました
+							<a style="display:inline;" href="./images/tabloid_full.pdf" download="tabloid_full.pdf">
+								<image src="images/download_icon.png" width="16px" height="16px"/>
+							</a>
+						</li>
 					</ul>
 					<ul class="menu">
 						<li>2021.2.4<p />サイトのイメージをアップしました</li>
