アイコン位置の調整

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					<ul class="menu">
 						<li>2021.6.2<p />
 							<a style="display:inline;color: #358de0;" href="images/tabloid.pdf" target="_blank">タブロイド紙</a>をアップしました
-							<a style="display:inline;" href="./images/tabloid_full.pdf" download="tabloid_full.pdf">
+							<a style="display:inline; vertical-align: middle;" href="./images/tabloid_full.pdf" download="tabloid_full.pdf">
 								<image src="images/download_icon.png" width="16px" height="16px"/>
 							</a>
 						</li>
