ダウンロードをアイコンからじゃなくリンクで指定するように修正

--- a/index.html
+++ b/index.html
@@ -66,10 +66,8 @@
 				<section class="grid">
 					<ul class="menu">
 						<li>2021.6.2<p />
-							<a style="display:inline;color: #358de0;" href="images/tabloid.pdf" target="_blank">タブロイド紙</a>をアップしました
-							<a style="display:inline; vertical-align: middle;" href="./images/tabloid_full.pdf" download="tabloid_full.pdf">
-								<image src="images/download_icon.png" width="16px" height="16px"/>
-							</a>
+							<a style="display:inline;color: #358de0;" href="images/tabloid.pdf" target="_blank">タブロイド紙</a>をアップしました<br />
+							(フルサイズのダウンロードは、<a style="display:inline;color: #358de0;" href="./images/tabloid_full.pdf" download="tabloid_full.pdf">こちら</a>から)
 						</li>
 					</ul>
 					<ul class="menu">
